# canview

./: .gitignore  ADD_CHANNEL_CRASH_FIX.md  AUTOMATION_COMPLETE.md  AUTO_LOAD_FINAL_FIX.md  AUTO_LOAD_FIX.md  AUTO_LOAD_LIBRARY.md  BLF_TIMESTAMP_FINAL_FIX.md  BLF_TIMESTAMP_FIX.md  BLF_TIME_DIAGNOSIS.md  BLF_TIME_FIX_SUMMARY.md  BLF_TIME_USAGE.md  BUILD.md  BUILD_FIX.md  BUILD_RELEASE.md  BUILD_STATUS.md  CAN_BLF_FIX.md  CHANGELOG.md  CHANNEL_CONFIGURATION.md  CHINESE_INPUT_FIX.md  CHINESE_INPUT_GUIDE.md  CHINESE_INPUT_QUICKREF.md  CHINESE_INPUT_SOLUTION.md  CHINESE_INPUT_TEST.md  CHINESE_INPUT_TROUBLESHOOTING.md  CHINESE_LIBRARY_WORKAROUND.md  CI_CD_PIPELINE.md  CLIPPY_FIXES.md  COMPILATION_FIXES.md  COMPILATION_SUCCESS.md  COMPILATION_VERIFICATION.md  CROSS_PLATFORM_PACKAGING.md  CURSOR_POSITION_IMPLEMENTATION.md  Cargo.toml  CUsersAdministratorRustroverProjectscanviewsrcmain.rs  DEBUG_AUTOLOAD.md  ENHANCED_TEXTINPUT_GUIDE.md  FINAL_STATUS.md  FIX_COMPILE.md  FOCUS_FIX_SUMMARY.md  FULL_REFACTORING_STATUS.md  (+157 more)
.claude/: settings.local.json
.github/: GITHUB_ACTIONS.md
.github/workflows/: build.yml  ci.yml  main.yml  release.yml  rust.yml
assets/: ICON_GUIDE.md  README.md  convert_icons.bat  convert_icons.py  convert_icons.sh
examples/: test_ime_input.rs
src/: main.rs  main.rs.backup  main.rs.broken_backup
src/1/: draggable_titlebar.rs
src/blf/: BLF_PARSING_IMPROVEMENTS.md  Cargo.toml  VERIFICATION_REPORT.md  analyze_canfd  analyze_canfd.rs  analyze_header  analyze_header.rs  analyze_header2  analyze_header2.rs  print_file_stats  print_file_stats.rs  test_can_blf.rs  verify_can_blf.md
src/blf/src/: blf_core.rs  error.rs  file.rs  file_statistics.rs  lib.rs  object_header.rs  object_type.rs  parser.rs  test_utils.rs
src/blf/src/objects/: log_container.rs  log_object.rs  mod.rs  most.rs  object_header.rs  object_type.rs  system.rs  system_events.rs  wlan.rs
src/blf/src/objects/app_events/: comment_marker.rs  mod.rs  trigger.rs
src/blf/src/objects/can/: error_status.rs  fd_message.rs  fd_message64.rs  messages.rs  messages.rs.old  mod.rs
src/blf/src/objects/env_vars/: mod.rs
src/blf/src/objects/ethernet/: frame.rs  mod.rs
src/blf/src/objects/flexray/: message.rs  mod.rs  status_events.rs
src/blf/src/objects/lin/: error_status.rs  events.rs  messages.rs  mod.rs
src/blf/tests/: read_sample.rs
src/cli/: Cargo.toml
src/parser/: Cargo.toml
src/parser/src/: dbc.rs  ldf.rs  lib.rs
src/view/: Cargo.toml  Cargo.toml.backup  LIBRARY_MANAGEMENT_REDESIGN.md  build.rs  chinese_input_patch.rs  library_english_only_fix.md  test_editor_import.rs  test_validation
src/view/examples/: chinese_input_example.rs  test_chinese_validation.rs  test_gpui_events.rs  test_input.rs
src/view/src/: CHANNEL_VERSION_GUIDE.md  LIBRARY_COMPLETE_SUMMARY.md  MODULE_STRUCTURE.md  MODULE_USAGE_EXAMPLES.md  PROJECT_STRUCTURE.md  REFACTORING.md  SIGNAL_LIBRARY_GUIDE.md  SIGNAL_LIBRARY_README.md  database.rs  library_view.rs  library_view_debug.rs  library_view_focused.rs  main.rs  main_backup.rs  playback.rs  temp_impl1.txt  test_editor.rs  test_gpui_editor.rs
src/view/src/app/: impls.rs  impls.rs.backup  mod.rs  state.rs  temp_method.txt
src/view/src/chart/: data.rs  mod.rs  renderer.rs
src/view/src/config/: constants.rs  io.rs  mod.rs  startup.rs
src/view/src/filters/: mod.rs
src/view/src/gpui_input/: element.rs  indent.rs  otp_input.rs  state.rs  text_wrapper.rs
src/view/src/handlers/: file.rs  filter.rs  mod.rs
src/view/src/models/: library.rs  mod.rs
src/view/src/rendering/: message.rs  mod.rs  utils.rs
src/view/src/ui/: mod.rs
src/view/src/ui/components/: button.rs  card.rs  chinese_friendly_input.rs  divider.rs  enhanced_text_input.rs  gpui_text_input_wrapper.rs  ime_text_input.rs  label.rs  mod.rs  panel.rs  simple_text_input.rs  text_input.rs  zed_input_field.rs  zed_style_text_input.rs
src/view/src/ui/views/: library_management.rs  library_management_enhanced.rs  library_view.rs  mod.rs
src/view/src/views/: chart_view.rs  config_view.rs  mod.rs
tests/: test_blf_tool.rs  test_ime_input.rs
