[package]
name = "canview"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
blf = { path = "src/blf" }
parser = { path = "src/parser" }
gpui = { git = "https://github.com/zed-industries/zed", branch = "main" }
smallvec = { version = "2.0.0-alpha.12" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = { version = "0.14", default-features = false, features = ["tokio"] }
log = "0.4"
env_logger = "0.11"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[workspace]
resolver = "2"
members = [
    "src/blf",
    "src/view",
    "src/parser",
]

[workspace.dependencies]
ashpd = { version = "0.8", default-features = false, features = ["tokio"] }
font-kit = { version = "0.14", default-features = false }

[patch.crates-io]
ashpd = { git = "https://github.com/bilelmoussaoui/ashpd", branch = "master" }
