[package]
name = "canview"
version = "0.1.0"
edition = "2021"

[dependencies]
blf = { path = "src/blf" }
parser = { path = "src/parser" }
gpui = "0.2.2"
gpui-component = "0.5.0"
smallvec = { version = "2.0.0-alpha.12" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = { version = "0.14", default-features = false, features = ["tokio"] }
log = "0.4"
env_logger = "0.11"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[workspace]
resolver = "2"
members = [
    "src/blf",
    "src/view",
    "src/parser",
]

# [[bin]]
# name = "test_blf_debug"
# path = "test_blf_debug.rs"

[workspace.dependencies]
ashpd = { version = "0.8", default-features = false, features = ["tokio"] }
# Downgrade font-kit to version that uses core-graphics 0.24
font-kit = { version = "0.11", default-features = false }

[patch.crates-io]
# Remove Zed's font-kit fork patch - using older version instead
# font-kit = { git = "https://github.com/zed-industries/font-kit", branch = "master" }
