[package]
name = "view"
version = "0.1.0"
edition = "2024"

[dependencies]
# Pin to specific commits to avoid core-graphics dependency conflicts on macOS
gpui = { git = "https://github.com/zed-industries/zed", rev = "v0.165.2" }
gpui-component = { git = "https://github.com/longbridge/gpui-component", rev = "main" }
anyhow = "1.0"
blf = { path = "../blf" }
parser = { path = "../parser" }
chrono = "0.4" # For timestamp formatting
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

# Platform-specific file dialog backend
[target.'cfg(windows)'.dependencies]
rfd = { version = "0.14", default-features = false, features = ["tokio"] }

[target.'cfg(target_os = "macos")'.dependencies]
rfd = { version = "0.14", default-features = false, features = ["tokio"] }

[target.'cfg(target_os = "linux")'.dependencies]
rfd = { version = "0.14", default-features = false, features = ["tokio", "xdg-portal"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[[bin]]
name = "view"
path = "src/main.rs"

# Windows 配置：隐藏控制台窗口
[profile.release]
strip = true  # 减小文件大小

# Windows 特定配置
[package.metadata.winres]
OriginalFilename = "canview.exe"
ProductName = "CANVIEW"
FileDescription = "CAN/LIN Bus Analysis Tool"
