[package]
name = "view"
version = "0.1.0"
edition = "2024"

[dependencies]
# Pinned to specific commits for reproducible builds and type compatibility
# These versions are known to work together on Windows and Linux
gpui = { git = "https://github.com/zed-industries/zed", rev = "0a338c37312fc8e2571f367e46b83a542f52ada2" }
gpui-component = { git = "https://github.com/longbridge/gpui-component", rev = "35f55766f71ef30ef8dfbbcf4f647fef49a99a83" }
anyhow = "1.0"
blf = { path = "../blf" }
parser = { path = "../parser" }
chrono = "0.4" # For timestamp formatting
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

# Platform-specific file dialog backend
[target.'cfg(windows)'.dependencies]
rfd = { version = "0.14", default-features = false, features = ["tokio"] }

[target.'cfg(target_os = "macos")'.dependencies]
rfd = { version = "0.14", default-features = false, features = ["tokio"] }

[target.'cfg(target_os = "linux")'.dependencies]
rfd = { version = "0.14", default-features = false, features = ["tokio", "xdg-portal"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[[bin]]
name = "view"
path = "src/main.rs"

# Windows 配置：隐藏控制台窗口
[profile.release]
strip = true  # 减小文件大小

# Windows 特定配置
[package.metadata.winres]
OriginalFilename = "canview.exe"
ProductName = "CANVIEW"
FileDescription = "CAN/LIN Bus Analysis Tool"
